# swlc-mcp

./: .gitignore  ARCHITECTURE.md  README.md  mcp_config.json  pyproject.toml  requirements.txt  start_mcp_server.bat  start_server.py
src/swlc_mcp/: __init__.py  api_server.py  backtest.py  database.py  predictor.py  server.py  sync_data.py
test/: __init__.py  test_api.py
web/: .gitignore  package-lock.json  package.json  server.js
web/public/: index.html
web/public/css/: style.css
web/public/js/: app.js
